# template-cpp-project

./: .clang-format  .clang-tidy  .cmake-format.py  .doxygen  .editorconfig  .gitignore  .gitmodules  .grazie.en.yaml  .valgrindrc  CMakeLists.txt  CMakePresets.json  README.md  doxyfile.in  readme.md
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: cmake-multi-platform.yml
android-project/: build.gradle  gradle.properties  settings.gradle
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/mil/eugene/gamedev/: GameDevSimulator.java
android-project/gradle/: libs.versions.toml
cmake/: CPM.cmake  cpm-config.cmake  package_manager.cmake  packages.cmake  warnings-config.cmake
cmake/cfg/: clang_format-config.cmake  clang_tidy-config.cmake  cpplint-config.cmake  doxygen-config.cmake  warnings-config.cmake
cmake/code-quality-tools/: enable_clang_format.cmake  enable_clang_tidy.cmake  enable_linter.cmake
cmake/cpm/: doctest-config.cmake  freetype-config.cmake  imgui-config.cmake  sdl3-config.cmake
cmake/pkg/: description.txt  doctest-config.cmake  freetype-config.cmake  imgui-config.cmake  package-config.cmake  package.desktop.in  sdl3-config.cmake
cmake/utils/: clang_doc-config.cmake  cpplint-config.cmake  doxygen-config.cmake
ctest/: CMakeLists.txt  doctest_example.cxx  env_test.cxx  imgui_example.cxx
docker/: Dockerfile  fedora.Dockerfile  manjaro.Dockerfile  readme.md
modules/config/: CPM.cmake.cmake
scripts/: add_submodule.sh  build_docs.sh  view_docs.sh
src/: CMakeLists.txt  main.cxx  sdl_main.cxx
src/lib/: CMakeLists.txt
test/: CMakeLists.txt  main_test.cxx
tests/: CMakeLists.txt  doctest_example.cxx  imgui_example.cxx  print_environment.cxx
tools/: tool.py
